--- a/style.css
+++ b/style.css
@@ -17,7 +17,7 @@ body {
 #header{
     padding: 5vh;
     text-align: center;
-    background-color: teal;
+    background-color: darkslategray;
     color: white;
 }
 
